--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "tapabocas",
   "version": "1.0.0",
   "private": true,
+  "proxy": "https://sandbox.checkout.payulatam.com/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "axios": "^0.19.2",
     "classnames": "2.2.6",
     "formik": "^2.1.4",
     "markdown-to-jsx": "^6.11.0",
+    "md5": "^2.2.1",
     "moment": "2.24.0",
     "node-sass": "4.12.0",
     "nouislider": "13.1.5",
