--- a/package.json
+++ b/package.json
@@ -2,20 +2,21 @@
   "name": "tapabocas",
   "version": "1.0.0",
   "private": true,
-  "proxy": "https://sandbox.checkout.payulatam.com/",
+  "proxy": "https://checkout.wompi.co/p/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "axios": "^0.19.2",
     "classnames": "2.2.6",
+    "crypto-random-string": "^3.2.0",
     "formik": "^2.1.4",
     "markdown-to-jsx": "^6.11.0",
     "md5": "^2.2.1",
     "moment": "2.24.0",
     "node-sass": "4.12.0",
     "nouislider": "13.1.5",
-    "query-string": "^6.11.1",
+    "query-string": "^6.12.0",
     "react": "16.8.6",
     "react-bootstrap-switch": "15.5.3",
     "react-datetime": "2.16.3",
