--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.2",
     "classnames": "2.2.6",
     "crypto-random-string": "^3.2.0",
+    "dotenv-flow": "^3.1.0",
     "firebase": "^7.14.0",
     "formik": "^2.1.4",
     "markdown-to-jsx": "^6.11.0",
