Add sku 004, remove sku 001

--- a/now.json
+++ b/now.json
@@ -5,7 +5,8 @@
       "REACT_APP_WOMPI_BASE_URL": "@wompi-api-url",
       "REACT_APP_WOMPI_PUBLIC_KEY": "@wompi-public-key",
       "REACT_APP_WOMPI_REDIRECT_URL": "@wompi-redirect-url",
-      "REACT_APP_WAPP_NUMBER": "@wapp-number"
+      "REACT_APP_WAPP_NUMBER": "@wapp-number",
+      "REACT_APP_WAPP_NUMBER_INST": "@wapp-number-inst"
     }
   }
 }
