--- a/now.json
+++ b/now.json
@@ -6,7 +6,8 @@
       "REACT_APP_WOMPI_PUBLIC_KEY": "@wompi-public-key",
       "REACT_APP_WOMPI_REDIRECT_URL": "@wompi-redirect-url",
       "REACT_APP_WAPP_NUMBER": "@wapp-number",
-      "REACT_APP_WAPP_NUMBER_INST": "@wapp-number-inst"
+      "REACT_APP_WAPP_NUMBER_INST": "@wapp-number-inst",
+      "DISCOUNT_CUPON": "@discount-cupon"
     }
   }
 }
