Add admin password

--- a/now.json
+++ b/now.json
@@ -9,7 +9,8 @@
       "REACT_APP_WAPP_NUMBER_INST": "@wapp-number-inst",
       "REACT_APP_DISCOUNT_CUPON_05": "@discount-cupon-05",
       "REACT_APP_DISCOUNT_CUPON_10": "@discount-cupon-10",
-      "REACT_APP_DISCOUNT_CUPON_15": "@discount-cupon-15"
+      "REACT_APP_DISCOUNT_CUPON_15": "@discount-cupon-15",
+      "REACT_APP_ADMIN_PASSWORD": "@admin-password"
     }
   }
 }
