--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router": "5.0.1",
     "react-router-dom": "5.0.1",
     "react-scripts": "3.0.1",
+    "react-spinners": "^0.8.1",
     "reactstrap": "8.0.0",
     "yup": "^0.28.3"
   },
