--- a/package.json
+++ b/package.json
@@ -25,11 +25,15 @@
     "react-datetime": "2.16.3",
     "react-dom": "16.8.6",
     "react-player": "^1.15.3",
+    "react-redux": "^7.2.0",
     "react-router": "5.0.1",
     "react-router-dom": "5.0.1",
     "react-scripts": "3.0.1",
     "react-spinners": "^0.8.1",
     "reactstrap": "8.0.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "yup": "^0.28.3"
   },
   "scripts": {
